Refactor: renamed ShoppingBasketCalculator to BasketCalculator and improved test coverage